[metadata]
name = bluetti_mqtt
version = 0.1.1
url = http://github.com/warhammerkid/bluetti_mqtt
author = Stephen Augenstein
author_email = perl.programmer@gmail.com
description = MQTT interface to Bluetti power stations
long_description = file: README.rst
license = MIT

[options]
python_requires = >=3.7
packages = find:
zip_safe = false
install_requires =
    bleak
    crcmod

[options.entry_points]
console_scripts =
    bluetti-logger = bluetti_mqtt.logger_cli:main
